fix : remove vertical scrollbar of page

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -3842,8 +3842,8 @@ tbody.collapse.in {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 180px;
-  height: 58px;
+  width: 175px;
+  height: 60px;
 }
 
 .embed-responsive {
